--- a/dubbo-zk-consumer/src/main/resources/application.properties
+++ b/dubbo-zk-consumer/src/main/resources/application.properties
@@ -1,14 +1,7 @@
 # Spring boot application
 spring.application.name=dubbo-zk-provider
-# \u5E94\u7528\u670D\u52A1web\u8BBF\u95EE\u7AEF\u53E3
+# Spring server port
 server.port=8081
-# Base packages to scan Dubbo Component: @org.apache.dubbo.config.annotation.Service
-dubbo.scan.base-packages=com.wlq.learning.consumer.service
-
-# Dubbo Protocol
-dubbo.protocol.name=dubbo
-## Random port
-dubbo.protocol.port=-1
 
 ## Dubbo Registry
 dubbo.registry.address=zookeeper://127.0.0.1:2181
