--- a/dubbo-zk-provider/pom.xml
+++ b/dubbo-zk-provider/pom.xml
@@ -17,11 +17,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
             <version>${dubbo-spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wlq.learning</groupId>
+            <artifactId>dubbo-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!-- Zookeeper dependencies -->
