--- a/dubbo-zk-provider/src/main/resources/application.properties
+++ b/dubbo-zk-provider/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Spring boot application
 spring.application.name=dubbo-zk-provider
-# \u5E94\u7528\u670D\u52A1web\u8BBF\u95EE\u7AEF\u53E3
+# Spring server port
 server.port=8080
 # Base packages to scan Dubbo Component: @org.apache.dubbo.config.annotation.Service
 dubbo.scan.base-packages=com.wlq.learning.provider.service
@@ -14,7 +14,7 @@ dubbo.protocol.port=-1
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
 
-dubbo.application.name=provider
+dubbo.application.name=consumer
 
 ## DemoService version
 demo.service.version=1.0.0
